# strikepad.io

./: LICENSE  index.html  package-lock.json  package.json  vite.config.ts
generatedFiles/: code.js  code.py
notes/: efd0ac64-f72d-4817-833b-ecc6103598a7.json
src/: App.css  App.tsx  Home.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/_components/Canvas/: index.tsx
src/_components/EditorComponents/: Box.css  Box.tsx  helpers.tsx
src/_components/EditorComponents/_components/: List.tsx
src/_components/NoteSelector/: index.tsx
src/_components/ResponseParser/: index.tsx
src/_components/Toolbox/: index.tsx
src/_pages/Code/: index.tsx
src/_pages/Notes/: context.tsx  index.tsx  notes.css
src/_pages/Pad/: index.tsx
src/_pages/ProjectBoard/: index.tsx
src/api/: notes.tsx
src/helpers/: createCtx.tsx  debounce.ts
src/hooks/: useDB.tsx
